[gd_scene load_steps=3 format=3 uid="uid://ddojplmkgujc7"]

[ext_resource type="Script" path="res://scripts/LevelSelector.gd" id="1_j86we"]
[ext_resource type="PackedScene" uid="uid://bhj2obbwggsae" path="res://scenes/shop.tscn" id="2_godiu"]

[node name="LevelSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j86we")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 455.0
offset_top = 266.0
offset_right = 697.0
offset_bottom = 378.0
color = Color(0.31802, 0.31802, 0.31802, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -33.0
offset_right = 97.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="lvl1Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Level 1"

[node name="lvl2Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Level 2"

[node name="lvl3Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Level 3"

[node name="ShopButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Shop"

[node name="Shop" parent="." instance=ExtResource("2_godiu")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/lvl1Button" to="." method="_on_lvl_1_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/lvl2Button" to="." method="_on_lvl_2_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/lvl3Button" to="." method="_on_lvl_3_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ShopButton" to="." method="_on_shop_button_pressed"]
